--- a/apps/web_sketchpad/src/index.css
+++ b/apps/web_sketchpad/src/index.css
@@ -2,6 +2,11 @@ body {
   font-family: Arial;
   background-color: skyblue;
   overscroll-behavior: none;
+  /*compatability*/
+  touch-action: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
 }
 
 code {
